@@ -187,12 +187,16 @@
 
 
     <h1>Set-TrustedHosts</h1>
-    <div>Sets the current computer's trusted hosts list.  Overwrites the existing list.</div>
+    <div>Sets the current computer's trusted hosts list.</div>
 
         <h2>Syntax</h2>
-    <pre class="Syntax"><code>Set-TrustedHosts [[-Entries] &lt;String[]&gt;] [-WhatIf] [-Confirm] [&lt;CommonParameters&gt;]</code></pre>
+    <pre class="Syntax"><code>Set-TrustedHosts [[-Entries] &lt;String[]&gt;] [&lt;CommonParameters&gt;]</code></pre>
     
-    
+        <h2>Description</h2>
+    <div class="Description">
+        <p>Clears the current trusted hosts list, and sets it to contain only the entries given by the <code>Entries</code> parameter.</p>
+
+    </div>
     
     
 
@@ -215,30 +219,7 @@
 				<td>false</td>
                 <td></td>
 			</tr>
-			<tr valign='top'>
-				<td>WhatIf</td>
-				<td><a href="http://msdn.microsoft.com/en-us/library/system.management.automation.switchparameter.aspx">SwitchParameter</a></td>
-				<td></td>
-				<td>false</td>
-				<td>false</td>
-                <td></td>
-			</tr>
-			<tr valign='top'>
-				<td>Confirm</td>
-				<td><a href="http://msdn.microsoft.com/en-us/library/system.management.automation.switchparameter.aspx">SwitchParameter</a></td>
-				<td></td>
-				<td>false</td>
-				<td>false</td>
-                <td></td>
-			</tr>
-                            <tr valign="top">
-                <td><a href="http://technet.microsoft.com/en-us/library/dd315352.aspx">CommonParameters</a></td>
-                <td></td>
-                <td>This cmdlet supports common parameters.  For more information type <br> <code>Get-Help about_CommonParameters</code>.</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                </tr>
+            
         </table>
         
     
@@ -247,6 +228,9 @@
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Set-TrustedHosts example.com,api.example.com,docs.example.com</code></pre>
+            <p><p>Sets the trusted hosts list to contain just the values <code>example.com</code>, <code>api.example.com</code>, and <code>docs.example.com</code>.</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
