@@ -30,6 +30,7 @@
   * [Test-PowerShellIs64Bit](http://get-carbon.org/help/Test-PowerShellIs64Bit.html)
   * [Add-TrustedHosts](http://get-carbon.org/help/Add-TrustedHosts.html)
   * [Get-TrustedHosts](http://get-carbon.org/help/Get-TrustedHosts.html)
+  * [Set-TrustedHosts](http://get-carbon.org/help/Set-TrustedHosts.html)
 * Improved whitespace in HTML documentation code samples.
 
 
